Added images from gdrive in read more section

--- a/content.html
+++ b/content.html
@@ -46,22 +46,22 @@
                 <h4 class="text-3xl mb-4">Read More</h4>
                 <div class="grid grid-cols-2 gap-4">
                     <a href="#" class="col-span-1">
-                        <img src="https://placehold.co/100x100" class="w-full h-64 object-cover rounded">
+                        <img src="assets/sample-1.png" class="w-full h-64 object-cover rounded">
                         <h5 class="mt-2 text-2xl font-medium">Article Title</h5>
                         <p class="text-gray-500 text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia harum vel quod distinctio vitae velit magnam provident quisquam!</p>
                     </a>
                     <a href="#" class="col-span-1">
-                        <img src="https://placehold.co/100x100" class="w-full h-64 object-cover rounded">
+                        <img src="assets/sample2.jpg" class="w-full h-64 object-cover rounded">
                         <h5 class="mt-2 text-2xl font-medium">Article Title</h5>
                         <p class="text-gray-500 text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia harum vel quod distinctio vitae velit magnam provident quisquam!</p>
                     </a>
                     <a href="#" class="col-span-1">
-                        <img src="https://placehold.co/100x100" class="w-full h-64 object-cover rounded">
+                        <img src="assets/sample3.jpg" class="w-full h-64 object-cover rounded">
                         <h5 class="mt-2 text-2xl font-medium">Article Title</h5>
                         <p class="text-gray-500 text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia harum vel quod distinctio vitae velit magnam provident quisquam!</p>
                     </a>
                     <a href="#" class="col-span-1">
-                        <img src="https://placehold.co/100x100" class="w-full h-64 object-cover rounded">
+                        <img src="assets/sample4.jpg" class="w-full h-64 object-cover rounded">
                         <h5 class="mt-2 text-2xl font-medium">Article Title</h5>
                         <p class="text-gray-500 text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia harum vel quod distinctio vitae velit magnam provident quisquam!</p>
                     </a>
