--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="assets/js/tailwind.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
+
     <body class="bg-blue-50 text-zinc-800">
+
+        <!-- header -->
         <nav class="w-full bg-white shadow border border-gray-200 rounded p-4 flex items-center justify-between">
             <div class="flex items-center space-x-4">
                 <img src="assets/logo.png" class="w-14 h-14">
@@ -15,8 +19,12 @@
                 <li>Home</li>
                 <li>Recent News</li>
                 <li>Learn Now</li>
+                <li><i class="fa-solid fa-bars"></i></li>
             </ul>
+           
         </nav>
+
+        <!-- body -->
         <div id="hero" class="text-center">
             <div class="max-w-7xl my-24 mx-auto">
                 <h3 class="text-6xl font-semibold">Navigating the World of <span class="text-indigo-700">Cybersecurity</span></h3>
@@ -58,6 +66,10 @@
                 <button class="bg-indigo-500 hover:bg-indigo-600 ease duration-200 rounded text-white px-2 py-1 mt-2">Learn More</button>
             </div>
         </div>
+
+
+
+        <!-- footer -->
         <footer class="w-full rounded max-w-7xl border shadow border-gray-200 mx-auto p-2 mt-24 bg-white p-8 flex justify-between">
             <div>
                 <h4 class="text-indigo-600 text-3xl font-medium">ThreatScope</h4>
