add files famous cyber attacks

--- a/famous-cyber-attacks/sony-picture-hack.html
+++ b/famous-cyber-attacks/sony-picture-hack.html
@@ -33,7 +33,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">WannaCry Ransomware Attack</h4>
+				<h4 class="text-6xl font-medium">Sony Pictures Hack</h4>
 				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
 			</div>
 		</div>
@@ -42,31 +42,31 @@
 		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-4 px-2">
 			<div class="max-w-7xl mx-auto space-y-20">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Overview</h4>
-                    <p>The WannaCry ransomware attack occurred in May 2017 and quickly became one of the largest cyberattacks in history. It targeted Microsoft Windows systems, spreading rapidly across over 150 countries. Victims included major hospitals, corporations, and government agencies, leading to critical disruptions. The attack exploited a vulnerability known as EternalBlue, which had been leaked from U.S. intelligence services. Although a security patch had been released before the attack, many organizations had not applied it. The ransomware encrypted files and demanded Bitcoin payments for decryption keys. The attack highlighted the severe risks posed by outdated systems. It also demonstrated how cyberweapons developed by nation-states could be repurposed by criminals.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Overview</h4>
+                    <p>The Sony Pictures hack occurred in November 2014 and is widely attributed to North Korea state-sponsored hackers. Hackers infiltrated Sony’s network, stole sensitive data, and deployed destructive malware that wiped computer systems. They leaked confidential emails, employee personal data, unreleased films, and internal company documents. The attack coincided with the planned release of The Interview, a film satirizing North Korean leadership. Hackers issued threats against movie theaters showing the film, causing Sony to initially cancel its release. U.S. intelligence agencies linked the attack to North Korea's government. The incident marked a significant escalation of state-sponsored cyber retaliation against corporations.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Method of Attack</h4>
-                    <p>The attackers used a wormable ransomware that leveraged the EternalBlue vulnerability in the Windows SMBv1 protocol to spread across networks. Once a system was infected, WannaCry encrypted important files and displayed a ransom note demanding Bitcoin payment. The malware also attempted to spread itself laterally to other vulnerable systems automatically. Although ransomware was the primary threat, the worm-like behavior made it particularly devastating. A "kill switch" domain was accidentally discovered, which helped slow the spread.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Method of Attack</h4>
+                    <p>The attackers used highly targeted spear-phishing emails to gain access to Sony’s internal network. After establishing a foothold, they escalated privileges and exfiltrated large volumes of data over months. They deployed the Destover malware (also known as WIPALL) to wipe systems and destroy data. The attack combined espionage, sabotage, and public threats, a rare combination in corporate cyberattacks. It highlighted the evolving threat of politically motivated hacking.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Impact and Consequences</h4>
+                    <h4 class="font-medium text-2xl text-indigo-600">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>The United Kingdom's National Health Service (NHS) was one of the hardest-hit organizations, leading to canceled surgeries and diverted ambulances. Critical medical equipment and patient records became inaccessible, creating a national healthcare emergency. It exposed serious cybersecurity weaknesses within essential public infrastructure.</p>
+                            <p>Sony Pictures suffered major financial losses due to halted operations and remediation efforts. The cost of recovery was estimated to exceed $100 million. Insurance claims were filed, but the incident still hurt Sony’s bottom line significantly.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Global businesses such as FedEx and Renault also suffered major disruptions. FedEx reported widespread system outages, severely impacting logistics and delivery operations. Renault had to temporarily halt manufacturing at several plants to contain the spread of the ransomware.</p>
+                            <p>Highly sensitive employee information, including Social Security numbers and medical records, was exposed. This led to class-action lawsuits from affected employees. Sony had to offer identity protection services and settle legal claims.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>The total economic damages from WannaCry were estimated to be between $4 billion and $8 billion globally. Many small and medium-sized businesses lacked the resources to recover quickly from the attack. This economic shockwave led companies to reassess their investment in cybersecurity preparedness.</p>
+                            <p>The leaked emails caused reputational damage among Sony executives and the broader entertainment industry. Several internal discussions exposed racial comments and controversial opinions. Public relations teams had to work extensively to repair the company's image.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Governments worldwide initiated urgent cybersecurity reviews after the WannaCry attack. New policies were created to improve the speed of critical patches and encourage better cooperation between the private sector and government agencies. It also reignited debates about the responsibility of intelligence agencies in securing or disclosing cyber vulnerabilities.</p>
+                            <p>The hack raised political tensions between the U.S. and North Korea. The FBI formally attributed the attack to North Korea, leading to economic sanctions. It also marked a turning point in U.S. government policy towards cyberattacks from foreign states.</p>
                         </div>
                     </div>
                 </div>
