--- a/famous-cyber-attacks/Yahoo-Data-Breaches.html
+++ b/famous-cyber-attacks/Yahoo-Data-Breaches.html
@@ -33,7 +33,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">WannaCry Ransomware Attack</h4>
+				<h4 class="text-6xl font-medium">Yahoo Data Breaches</h4>
 				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
 			</div>
 		</div>
@@ -42,31 +42,31 @@
 		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-4 px-2">
 			<div class="max-w-7xl mx-auto space-y-20">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Overview</h4>
-                    <p>The WannaCry ransomware attack occurred in May 2017 and quickly became one of the largest cyberattacks in history. It targeted Microsoft Windows systems, spreading rapidly across over 150 countries. Victims included major hospitals, corporations, and government agencies, leading to critical disruptions. The attack exploited a vulnerability known as EternalBlue, which had been leaked from U.S. intelligence services. Although a security patch had been released before the attack, many organizations had not applied it. The ransomware encrypted files and demanded Bitcoin payments for decryption keys. The attack highlighted the severe risks posed by outdated systems. It also demonstrated how cyberweapons developed by nation-states could be repurposed by criminals.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Overview</h4>
+                    <p>The Yahoo data breaches were among the largest known breaches in internet history. They occurred between 2013 and 2014 but were only disclosed to the public in 2016 and 2017. The breaches compromised data from all 3 billion Yahoo accounts. Stolen information included names, email addresses, hashed passwords, and security questions and answers. Yahoo initially underestimated the number of affected users, leading to significant public backlash. Nation-state actors were suspected to be involved in at least one of the breaches. The late disclosure and mishandling of the breach damaged Yahoo’s reputation severely. It also significantly impacted Yahoo’s acquisition by Verizon.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Method of Attack</h4>
-                    <p>The attackers used a wormable ransomware that leveraged the EternalBlue vulnerability in the Windows SMBv1 protocol to spread across networks. Once a system was infected, WannaCry encrypted important files and displayed a ransom note demanding Bitcoin payment. The malware also attempted to spread itself laterally to other vulnerable systems automatically. Although ransomware was the primary threat, the worm-like behavior made it particularly devastating. A "kill switch" domain was accidentally discovered, which helped slow the spread.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Method of Attack</h4>
+                    <p>Attackers used spear-phishing tactics to gain initial access to Yahoo’s systems. Once inside, they forged authentication cookies, allowing them to access accounts without needing passwords. The breaches were persistent, with hackers maintaining long-term access to Yahoo's user database. Although no financial data was reported stolen, the personal information compromised created long-term risks for users. The main threat involved credential theft and account compromise across multiple platforms.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Impact and Consequences</h4>
+                    <h4 class="font-medium text-2xl text-indigo-600">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>The United Kingdom's National Health Service (NHS) was one of the hardest-hit organizations, leading to canceled surgeries and diverted ambulances. Critical medical equipment and patient records became inaccessible, creating a national healthcare emergency. It exposed serious cybersecurity weaknesses within essential public infrastructure.</p>
+                            <p>Yahoo faced significant financial consequences when Verizon reduced its acquisition price by $350 million. The final deal valued Yahoo at around $4.48 billion, a sharp decrease from the original offer. This represented one of the largest merger devaluations due to a cyber incident.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Global businesses such as FedEx and Renault also suffered major disruptions. FedEx reported widespread system outages, severely impacting logistics and delivery operations. Renault had to temporarily halt manufacturing at several plants to contain the spread of the ransomware.</p>
+                            <p>The breach destroyed much of Yahoo’s brand trust among users. Many users abandoned their accounts or moved to competing services due to fears over security. This severely reduced Yahoo’s active user base and advertising revenue.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>The total economic damages from WannaCry were estimated to be between $4 billion and $8 billion globally. Many small and medium-sized businesses lacked the resources to recover quickly from the attack. This economic shockwave led companies to reassess their investment in cybersecurity preparedness.</p>
+                            <p>The U.S. Securities and Exchange Commission (SEC) fined Yahoo's parent company for failing to disclose the breach sooner. This was one of the first instances where a company was penalized for delayed cyber breach disclosure. It set a legal precedent for breach notification regulations in the U.S.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Governments worldwide initiated urgent cybersecurity reviews after the WannaCry attack. New policies were created to improve the speed of critical patches and encourage better cooperation between the private sector and government agencies. It also reignited debates about the responsibility of intelligence agencies in securing or disclosing cyber vulnerabilities.</p>
+                            <p>The stolen Yahoo data was sold and distributed on underground forums. This created widespread secondary attacks like phishing, credential stuffing, and identity theft. Many users’ accounts on unrelated services were compromised because of password reuse.</p>
                         </div>
                     </div>
                 </div>
