--- a/famous-cyber-attacks/lockbit-ransom.html
+++ b/famous-cyber-attacks/lockbit-ransom.html
@@ -33,7 +33,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">WannaCry Ransomware Attack</h4>
+				<h4 class="text-6xl font-medium">LockBit Ransom</h4>
 				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
 			</div>
 		</div>
@@ -42,31 +42,31 @@
 		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-4 px-2">
 			<div class="max-w-7xl mx-auto space-y-20">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Overview</h4>
-                    <p>The WannaCry ransomware attack occurred in May 2017 and quickly became one of the largest cyberattacks in history. It targeted Microsoft Windows systems, spreading rapidly across over 150 countries. Victims included major hospitals, corporations, and government agencies, leading to critical disruptions. The attack exploited a vulnerability known as EternalBlue, which had been leaked from U.S. intelligence services. Although a security patch had been released before the attack, many organizations had not applied it. The ransomware encrypted files and demanded Bitcoin payments for decryption keys. The attack highlighted the severe risks posed by outdated systems. It also demonstrated how cyberweapons developed by nation-states could be repurposed by criminals.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Overview</h4>
+                    <p>LockBit ransomware attacks first emerged in 2020 and have rapidly become one of the most dominant ransomware threats globally. The group operates a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks using LockBit's tools. LockBit is known for its fast encryption speeds and double extortion tactics, where data is both encrypted and stolen. The group has targeted various sectors, including healthcare, manufacturing, education, and government. LockBit consistently updates its malware, releasing new versions like LockBit 2.0, 3.0, and LockBit Black. Their attacks often include threats to leak data unless ransom demands are met. Despite law enforcement crackdowns, LockBit remains highly active as of 2025. It continues to be a major player in the global ransomware ecosystem.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Method of Attack</h4>
-                    <p>The attackers used a wormable ransomware that leveraged the EternalBlue vulnerability in the Windows SMBv1 protocol to spread across networks. Once a system was infected, WannaCry encrypted important files and displayed a ransom note demanding Bitcoin payment. The malware also attempted to spread itself laterally to other vulnerable systems automatically. Although ransomware was the primary threat, the worm-like behavior made it particularly devastating. A "kill switch" domain was accidentally discovered, which helped slow the spread.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Method of Attack</h4>
+                    <p>LockBit affiliates often use phishing emails, exposed Remote Desktop Protocol (RDP) servers, or stolen credentials to access networks. Once inside, they move laterally and deploy the ransomware payload to encrypt critical systems. The malware uses strong encryption algorithms and can automate parts of the attack to maximize damage quickly. LockBit operators also steal sensitive data before encryption for additional leverage. Their approach combines both ransomware and data exfiltration threats.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Impact and Consequences</h4>
+                    <h4 class="font-medium text-2xl text-indigo-600">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>The United Kingdom's National Health Service (NHS) was one of the hardest-hit organizations, leading to canceled surgeries and diverted ambulances. Critical medical equipment and patient records became inaccessible, creating a national healthcare emergency. It exposed serious cybersecurity weaknesses within essential public infrastructure.</p>
+                            <p>Healthcare institutions targeted by LockBit faced life-threatening service interruptions. Hospitals had to cancel surgeries and reroute emergency patients due to locked systems. This demonstrated the devastating impact of ransomware on critical infrastructure.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Global businesses such as FedEx and Renault also suffered major disruptions. FedEx reported widespread system outages, severely impacting logistics and delivery operations. Renault had to temporarily halt manufacturing at several plants to contain the spread of the ransomware.</p>
+                            <p>Businesses attacked by LockBit experienced massive operational downtime and ransom demands reaching millions of dollars. Many organizations faced public relations crises after data leaks. Some companies went bankrupt following unsuccessful recovery efforts.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>The total economic damages from WannaCry were estimated to be between $4 billion and $8 billion globally. Many small and medium-sized businesses lacked the resources to recover quickly from the attack. This economic shockwave led companies to reassess their investment in cybersecurity preparedness.</p>
+                            <p>LockBit's success has encouraged the growth of the RaaS model in the cybercriminal ecosystem. More amateur hackers now have access to sophisticated ransomware tools. This has led to an overall increase in the frequency of ransomware attacks worldwide.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Governments worldwide initiated urgent cybersecurity reviews after the WannaCry attack. New policies were created to improve the speed of critical patches and encourage better cooperation between the private sector and government agencies. It also reignited debates about the responsibility of intelligence agencies in securing or disclosing cyber vulnerabilities.</p>
+                            <p>Law enforcement agencies like the FBI and Europol have launched major crackdowns against LockBit affiliates. Some affiliates have been arrested, and LockBit’s infrastructure has been temporarily disrupted. However, the group's decentralized model allows it to recover and rebrand quickly.</p>
                         </div>
                     </div>
                 </div>
