--- a/concepts-of-cybersecurity.html
+++ b/concepts-of-cybersecurity.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Tailwind</title>
+		<title>Concepts of Cybersecurity</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="assets/css/fonts.css">
 	</head>
@@ -33,32 +33,32 @@
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
 				<h4 class="text-6xl font-medium">Concept of Cybersecurity</h4>
-				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+                <p class="mt-4">Welcome to the fascinating world of cybersecurity, where we trace the roots of hacking and the rise of cybercrime from their earliest forms to today’s digital battlegrounds. This page explores the history of computer vulnerabilities that once seemed harmless but laid the groundwork for modern threats. You'll learn how cyber threats have evolved—from simple pranks to sophisticated global attacks that challenge even the most advanced defenses. We also shine a light on prominent ethical hackers who use their skills to protect and educate, proving that not all hackers wear black hats.</p>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-6 px-2">
             <div class="max-w-7xl bg-zinc-800/50 border border-zinc-700/50 rounded p-4 mx-auto">
                 <h4 class="text-2xl font-medium">Origin of Hacking and Cybercrime</h4>
                 <p class="my-2">Cybercrime and hacking have a surprisingly long history, beginning as early as 1834 when two brothers manipulated France's telegraph system to steal financial information—arguably the first recorded cyberattack. In the 1940s, René Carmille used his knowledge of punch-card computers to quietly sabotage Nazi data collection, making him one of the earliest ethical hackers. The 1960s and 70s saw the rise of more experimental hacking, like the Creeper virus that moved between computers on ARPANET and its antidote, Reaper—the first antivirus software. As personal computers became more common in the 1980s and 90s, malicious hacking increased, but so did the efforts of white hat hackers trying to protect systems. One of the most famous cases was Kevin Mitnick, who went from infiltrating major corporations to becoming a cybersecurity consultant. Over time, the fight against cybercrime has evolved into a full-blown industry, with experts working daily to defend against increasingly sophisticated digital threats.</p>
-                <button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button>
+                <a href="./concept-of-cybersecurity/origin.html"><button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button></a>
             </div>
 
             <div class="max-w-7xl bg-zinc-800/50 border border-zinc-700/50 rounded p-4 mx-auto">
                 <h4 class="text-2xl font-medium">History of Computer Vulnerabilities</h4>
                 <p class="my-2">Cybersecurity's journey began in 1971 when Bob Thomas created "Creeper," a program that moved across ARPANET, displaying the message "I'm the creeper, catch me if you can!" Though not harmful, it revealed the potential for network vulnerabilities. Ray Tomlinson, known for inventing email, responded with "Reaper," the first antivirus software designed to eliminate Creeper, marking the inception of cybersecurity measures. The 1980s saw a surge in cyber threats, with notable breaches at institutions like AT&T and the Los Alamos National Laboratory, highlighting the need for robust security protocols. Terms like "computer virus" and "trojan horse" emerged, and antivirus solutions such as McAfee's VirusScan became essential tools. The decade also introduced the Morris Worm in 1988, one of the first worms to cause widespread disruption, emphasizing the escalating complexity of cyber threats and the critical importance of cybersecurity defenses.</p>
-                <button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button>
+                <a href="./concept-of-cybersecurity/history.html"><button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button></a>
             </div>
 
             <div class="max-w-7xl bg-zinc-800/50 border border-zinc-700/50 rounded p-4 mx-auto">
                 <h4 class="text-2xl font-medium">Evolution of Cyber Threats</h4>
                 <p class="my-2">The evolution of cyber threats has progressed from early computer viruses to sophisticated AI-driven attacks, reflecting the rapid advancement of technology and the increasing value of digital assets. In the 1980s, threats like the Morris Worm highlighted the potential for widespread disruption, leading to the development of antivirus software and firewalls. The 1990s and early 2000s saw the rise of more destructive malware, such as the ILOVEYOU worm, which caused billions in damages, the damage that this particular virus has caused prompted the establishment of dedicated cybersecurity divisions. By the mid-2000s, cybercriminals shifted to advanced persistent threats(APTs), exemplified by Operation Aurora, targeting corporate and government data through prolonged, stealthy intrusions. The 2010s introduced ransomware attacks like WannaCry, exploiting system vulnerabilities for financial gain, and the COVID-19 pandemic further exacerbated cyber threats, with significant breaches in organizations like the WHO. Today, AI-powered cyberattacks employ automation, deep fakes, and personalized phishing, posing significant challenges to traditional cybersecurity measures and necessitating the development of AI-driven defense mechanisms.</p>
-                <button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button>
+                <a href="./concept-of-cybersecurity/evolution.html"><button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button></a>
             </div>
 
             <div class="max-w-7xl bg-zinc-800/50 border border-zinc-700/50 rounded p-4 mx-auto">
                 <h4 class="text-2xl font-medium">Prominent Ethical Hackers</h4>
                 <p class="my-2">The field of ethical hacking involves the use of hacking skills for legal and constructive purposes, often to identify and fix vulnerabilities in systems to improve security. In the list of famous names, the most renowned ethical hackers is Kevin Mitnick, who, after a notorious hacking career, became a leading security consultant and author. Tsutomu Shimomura, a physicist and cybersecurity expert, played a critical role in capturing Mitnick with the help of the FBI. Joanna Rutkowska is known for her groundbreaking work on rootkit vulnerabilities, notably exposing flaws in Windows Vista, while Charlie Miller identified vulnerabilities in Apple products and demonstrated security risks in car systems. Jayson E. Street specializes in physical security penetration and has conducted real-world penetration tests to help organizations secure their premises. Other notable figures in this field include Richard Thieme, Chris Hadnagy, Marc Maiffret, Mohamed Elnouby, and Rafay Baloch, who have all contributed immensely to identifying vulnerabilities in major platforms and improving security standards.</p>
-                <button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button>
+                <a href="./concept-of-cybersecurity/prominent-hackers.html"><button class="px-2 py-1 rounded text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200">Learn More</button></a>
             </div>
         </div>
 		
