design: changes in sidebar items design

--- a/companies-affected.html
+++ b/companies-affected.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </div>
-                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto right-0 w-64 bg-zinc-950 text-white transform translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
+                <div id="sidebar" class="fixed inset-y-0 overflow-y-auto left-0 w-64 bg-zinc-950 text-white transform -translate-x-full transition-transform duration-300 [&::-webkit-scrollbar]:w-1
                 [&::-webkit-scrollbar-track]:bg-gray-100
                 [&::-webkit-scrollbar-thumb]:bg-gray-300
                 dark:[&::-webkit-scrollbar-track]:bg-neutral-700
@@ -53,13 +53,13 @@
                                 <li class="text-lg font-medium px-2">Navigations</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Home</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Recent News</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Learn Now</a>
                                         </li>
                                     </ul>
@@ -72,13 +72,13 @@
                                 <li class="text-lg font-medium px-2">Concepts</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -91,13 +91,13 @@
                                 <li class="text-lg font-medium px-2">Vulnerabilities</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -110,13 +110,13 @@
                                 <li class="text-lg font-medium px-2">Famous Attacks</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -129,13 +129,13 @@
                                 <li class="text-lg font-medium px-2">Recent Attacks</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -148,13 +148,13 @@
                                 <li class="text-lg font-medium px-2">Companies Affected</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -167,13 +167,13 @@
                                 <li class="text-lg font-medium px-2">Protective Measures</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -186,13 +186,13 @@
                                 <li class="text-lg font-medium px-2">Future Threats</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -205,13 +205,13 @@
                                 <li class="text-lg font-medium px-2">Gallery</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -224,13 +224,13 @@
                                 <li class="text-lg font-medium px-2">About Us</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -243,13 +243,13 @@
                                 <li class="text-lg font-medium px-2">Contact Us</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
@@ -262,13 +262,13 @@
                                 <li class="text-lg font-medium px-2">Vulnerabilities</li>
                                 <li>
                                     <ul class="">
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 1</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 2</a>
                                         </li>
-                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-2 px-2 rounded">
+                                        <li class="text-gray-300 text-sm hover:bg-zinc-800 ease duration-200 p-1 px-6 rounded">
                                             <a href="#">Item 3</a>
                                         </li>
                                     </ul>
